lanecwe-Prod/src/objects/PGIError__c.object
<CustomObject>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Error_Type__c</fullName>
        <label>Error Type</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <label>PGIError</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Error_Code__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Error_Type__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>PGIError Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PGIErrors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>